# paris-hackathon-2026-inference

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_server.sh
eval/throughput/: run_throughput.py
prototype/: README.md  min_server.py  start_min_server.sh  start_vllm.sh
server/: __init__.py  app.py  core.py  custom_backend.py  engine.py  legacy_engine_runtime.py  main.py  modeling_qwen3_5_moe.py  models.py  router.py  walkthrough.md
server/attention/: __init__.py  base.py  fa.py  fi.py  trtllm.py
server/benchmark/: client.py  perf.py
server/distributed/: impl.py
server/engine/: config.py  engine.py  graph.py  sample.py
server/kernel/: __main__.py  pynccl.py
server/kernels/: fused_moe.py
server/kvcache/: __init__.py  mha_pool.py  radix_cache.py
server/layers/: attention.py  embedding.py  linear.py  moe.py  rotary.py
server/llm/: llm.py
server/message/: backend.py  frontend.py  tokenizer.py
server/models/: base.py  config.py  llama.py  mistral.py  qwen2.py  qwen3.py  qwen3_5.py  qwen3_moe.py  register.py  utils.py  weight.py
server/moe/: __init__.py  fused.py
server/scheduler/: cache.py  config.py  decode.py  io.py  prefill.py  scheduler.py  utils.py
server/server/: api_server.py  args.py  launch.py
server/tokenizer/: detokenize.py  server.py  tokenize.py
server/utils/: logger.py
