[project]
name = "hackathon"
version = "0.1.0"
description = "Evaluation harness for Qwen3.5-35B-A3B inference engine hackathon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "fastapi>=0.115",
    "flashinfer-cubin",
    "flashinfer-python",
    "lm-eval[api]>=0.4.4",
    "msgpack>=1.1",
    "transformers>=4.45",
    "prompt-toolkit",
    "psutil",
    "pyzmq>=26",
    "safetensors>=0.5",
    "sgl-kernel",
    "tabulate",
    "torch>=2.10.0",
    "tqdm",
    "triton>=3.0; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "uvicorn>=0.30",
    "numpy",
]

[project.optional-dependencies]
baseline = ["vllm>=0.8"]

[tool.setuptools.packages.find]
include = ["eval*", "server*"]

[project.scripts]
check-server = "eval.check_server:main"
run-correctness = "eval.correctness.run_correctness:main"
run-throughput = "eval.throughput.run_throughput:main"
